# voice-ai-livekit

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  constants.py  docker-compose.yml  main.py  models.py  pyproject.toml  restaurant_agent.py  router.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/demos/: AlertMessage.tsx  SubmitButton.tsx  ThinkingBlock.tsx  VoiceInterface.tsx
utils/: livekit_utils.py  llm_provider.py
